# MetaGPT-migrate-to-uv

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: build-package.yaml  fulltest.yaml  pre-commit.yaml  unittest.yaml
examples/: write_tutorial.py
metagpt/actions/: write_tutorial.py
metagpt/document_store/: base_store.py  faiss_store.py
metagpt/provider/: human_provider.py
metagpt/utils/: custom_decoder.py
